some minor tweaks

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -6,7 +6,7 @@ author: holgax
 <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
 In the last couple of weeks, location mattered deeply for Delta Chat, the "Chat over E-mail"
 messenger. It does make a difference if software development is situated in a Starbucks
-in San Francisco or around a refurbished coffee-bus in Kyiv, the embattled Ukrainian city just 200km away both from a war zone and from Czernobyl. Some of you prelinarily noticed the appearance of "on demand location streaming" in the advanced Android app settings.  This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space. 
+in San Francisco or around a refurbished coffee-bus in Kyiv, the embattled Ukrainian city just 200km away both from a war zone and from Chernobyl. Some of you prelinarily noticed the appearance of "on demand location streaming" in the advanced Android app settings.  This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
 <img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> 
 Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groupings engaged with one topic or another. 
 
@@ -65,7 +65,7 @@ would not have been possible.*"
 The "X" in Xyiv can be taken to symbolize the "unknown", the twisted and winded paths
 of developments one can not predict nor expect. And the unexpectable did arrive 
 during our Kyiv gathering. Friedel played with [C2Rust](https://c2rust.com/),
-a new tool to convert C-code to Rust and, applying a few more magical spells, managed to produce a rough Rust version of Delta Chat Core. The new code even remained readable and almost compiled! 
+a new tool to convert C-code to Rust and, applying a few more magical spells, managed to produce a rough Rust version of Delta Chat Core (DCC). The new code even remained readable and almost compiled!
 Several discussions and hacking-day-and-night sessions later, the Rustocalypse appears 
 to be approaching, with the [new Delta Chat Rust core](https://github.com/deltachat/deltachat-core-rust/) poised to become the new base for all Delta Chat apps. The C2Rust translation was 
 possible only because DCC is written in plain C -- by contrast, C++ code can not 
@@ -174,7 +174,7 @@ better arrange for help.
 
 <a href="../assets/blog/xyiv-cards1.jpg"><img src="../assets/blog/xyiv-cards1.png" width="400" style="float: left; margin-right: 10px" /></a>
 
-The game on sunday, secretly prepared by Xenia with graphics from Demian, marked kind of a culmination of an already eventful week. Participants, including locals, were put into two groups, "Cubes" and "Spheres".  Players from both teams drew a card and played a role -- journalist, whistleblower, spy, politician with each side co-ordinated by one person sitting on Delta Chat desktop at the "basecamp" location.  Players turned on location streaming and had to carry out a complex set of concurrent htasks, with a lot of fun ensuing dynamics and confusion.  Special points were gained when one side managed to "jail" the other side's politician or journalist.  
+The game on sunday, secretly prepared by Xenia with graphics from Demian, marked kind of a culmination of an already eventful week. Participants, including locals, were put into two groups, "Cubes" and "Spheres".  Players from both teams drew a card and played a role -- journalist, whistleblower, spy, politician with each side co-ordinated by one person sitting on Delta Chat desktop at the "basecamp" location.  Players turned on location streaming and had to carry out a complex set of concurrent tasks, with a lot of fun ensuing dynamics and confusion.  Special points were gained when one side managed to "jail" the other side's politician or journalist.
 
 Co-incidentally, the sunday was also a religious culmination in it being the main day of ortodox eastern where everybody is out in the streets and churches.  
 <img src="../assets/blog/xyiv-church1b.png" width="200" style="float: right; margin-left: 10px" /> 
@@ -197,7 +197,7 @@ secretive talks were overheart around *Operation Werewolf* ... let further gamin
 <img src="../assets/blog/xyiv-anna2.jpg" width="200" style="float: right; margin-left: 10px" /> 
 Lastly, after the game, we had a party that was so nice that almost nobody had time
 to take pictures. There are rumors it took place in some cellar and that there was
-projected live-graphic coding at play, as well as shortages and abundances of alcohol and that some folks only managed to get back well after the sun had set .... but in any case special thanks go to Anna who was our local support for arranging and caring for most of what was described here in this post. 
+projected live-graphic coding at play, as well as shortages and abundances of alcohol and that some folks only managed to get back well after the sun arose .... but in any case special thanks go to Anna who was our local support for arranging and caring for most of what was described here in this post.
 
 # Upcoming stabilization releases ... 
 
