--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -35,8 +35,8 @@ for co-ordination as it offers more screen space.  This *asymetric scenario* als
 played out in a special game we played in the streets of the Podil quarter and 
 the harbor of Kyiv ... but more on this at the end of this post ;) 
 
-Delta Chat currently uses the [mapbox Open Source libraries](https://docs.mapbox.com/android/maps/overview/) and retrieves map data from mapbox servers, but it does share precise locations with 
-the mapbox servers. Note that an observant user quickly [noticed unintended data leaks](https://support.delta.chat/t/mapbox-sends-too-many-data-to-their-servers/393) which we quickly fixed and
+Delta Chat currently uses the [mapbox Open Source libraries](https://docs.mapbox.com/android/maps/overview/) and retrieves map data from mapbox servers, but it does *not* share precise locations with 
+the mapbox servers. Note that an observant contributor quickly [noticed unintended data leaks](https://support.delta.chat/t/mapbox-sends-too-many-data-to-their-servers/393) which we quickly fixed and
 released to GPlay and F-droid. In the long term we would like to integrate properly decentralized 
 map servers and are conspiring with substack who was, also during Xyiv, pushing forward [new ways to store, compute and share map data](https://github.com/peermaps/eyros), with an eye to later Delta
 Chat integration. Meanwhile mapbox does the job and was convenient enough to integrate 
