target comments from adb

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -148,7 +148,7 @@ the future. Expect some news later in 2019 when the bots will be coming for you,
 riding on the waves of the coming Rustocalypse. 
 
 <img src="../assets/blog/dat-logo.png" width="100" style="float: right; margin-right: 10px" /> 
-Speaking of Rust, Sid, Franz and Matze were progressing continously on their with their Rust work on [Arso](https://arso.xyz/), a decentralized archiving project based on the [DAT P2P protocols](https://datproject.org/). Several conversations revolved around potential integrations of Delta Chat Bots with these decentralized archiving efforts. Conversations are about integrating decentralized approaches rather than trying to build "replace-the-world" platform projects that try to convince others to use and base everything on one's platform.  Arguably, decentralization projects often are often overly focused on technical decentralization but produce island platforms that do not integrate with one another.  The future of decentralization maybe lies more on **integrations at the UX level** so that users can make actual use of the wealth of interesting decentralization projects -- rather than adding yet more clever technical algorithms to any single project. 
+Speaking of Rust, Sid, Franz and Matze were progressing continuously with their work on [Arso](https://arso.xyz/), a decentralized archiving project based on the [DAT P2P protocols](https://datproject.org/). Several conversations revolved around potential integrations of Delta Chat Bots with these decentralized archiving efforts. Conversations are about integrating decentralized approaches rather than trying to build "replace-the-world" platform projects that try to convince others to use and base everything on one's platform.  Arguably, decentralization projects often are overly focused on technical decentralization but produce island platforms that do not integrate with one another.  The future of decentralization maybe lies more on **integrations at the UX level** so that users can make actual use of the wealth of interesting decentralization projects -- rather than adding yet more clever technical algorithms to any single project. 
 
 <img src="../assets/blog/xyiv-ux2.jpg" width="200" style="float: left; margin-right: 10px" /> 
 Speaking about the future, we had Eileen from [SimplySecure](https://simplysecure.org/) with us 
