--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -6,9 +6,9 @@ author: holgax
 <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
 In the last couple of weeks, location mattered deeply for Delta Chat, the "Chat over E-mail"
 messenger. It does make a difference if software development is situated in a Starbucks
-in San Francisco or around a refurbished coffee-bus in Kyiv, the embattled Ukrainian city just 200km away both from a war zone and from Chernobyl. Some of you prelinarily noticed the appearance of "on demand location streaming" in the advanced Android app settings.  This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
+in San Francisco or around a refurbished coffee-bus in Kyiv, the Ukrainian capital just 200km away both from a war zone and from Chernobyl. Some of you noticed already the appearance of "on demand location streaming" in the advanced Android app settings. This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
 <img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> 
-Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groupings engaged with one topic or another. 
+Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groups engaged with one topic or another. 
 
 ## On-demand location streaming 
 
@@ -84,7 +84,7 @@ do Pull Requests to make [the new DCC Rust core safer?](https://github.com/delta
 <img src="../assets/blog/xyiv-uxcomics.jpg" width="250" style="float: left; margin-right: 10px" /> 
 The Xyiv gathering started off with **two user-test sessions with journalists and activists**, 
 performed by Xenia and Vadym who in March had published their findings on the [first round of UX tests in 2018](https://delta.chat/en/2019-03-30-uxreport). Delta Chat is a deeply UX driven project
-and in contrast to the many "casual" testings on various occassions, and from feedback on the lively [support forum](https://support.delta.chat), our Kyiv UX tests are carried out in a more systematic, scientific manner.  One warm-up task was to interpret prototype drawings for explaining how Autocrypt encryption works. The drawings are part of an attempt to educate with other images than the rather abstract "locks" and to convey that Autocrypt encryption is established opportunistically, instead of "up-front". A first confusion arose on the first panel of the drawing: people thought that the first message was already encrypted (because of the "weird characters") - this is in fact misleading, so we will try to change to a "clear text" phrase like "hey, let's party". Second, folks who were not drinking did not understand the metaphor of clanging glasses together, however, others liked this metaphor a lot, one tester said "when I come to Schottland I first feel that I do not understand their English, but after the first whiskey I understand everything".  The second phase of the testings involved testers looking carefully at Delta Chat screenshots for three minutes and telling what they saw and understood. 
+and in contrast to the many "casual" tests on various occassions, and from feedback on the lively [support forum](https://support.delta.chat), our Kyiv UX tests are carried out in a more systematic, scientific manner.  One warm-up task was to interpret prototype drawings for explaining how Autocrypt encryption works. The drawings are part of an attempt to educate with other images than the rather abstract "locks" and to convey that Autocrypt encryption is established opportunistically, instead of "up-front". A first confusion arose on the first panel of the drawing: people thought that the first message was already encrypted (because of the "weird characters") - this is in fact misleading, so we will try to change to a "clear text" phrase like "hey, let's party". Second, folks who were not drinking did not understand the metaphor of clanging glasses together, however, others liked this metaphor a lot, one tester said "when I come to Schottland I first feel that I do not understand their English, but after the first whiskey I understand everything".  The second phase of the testings involved testers looking carefully at Delta Chat screenshots for three minutes and telling what they saw and understood. 
 
 <img src="../assets/blog/xyiv-uxtable1.gif" width="300" style="float: right; margin-right: 10px" /> 
 After these two warm-up tasks, testers had to perform and evaluate prepared tasks in 
