--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -1,6 +1,6 @@
 ---
 title: Location matters! UX testing, the Rustocalypse and other Delta Xyiv happenings ...
-author: holgax
+author: olgax
 ---
 
 <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
