save another 460kb and fix riesenrad image and thumbnail

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -44,7 +44,7 @@ on both Android and Desktop.
 
 # The coming Delta Chat Rustocalypse 
 
-<a href="../assets/blog/xyiv-riesenrad.jpg"><img src="../assets/blog/xyiv-riesenrad-thumb.gif" width="400" style="float: left; margin-right: 10px" /></a> 
+<a href="../assets/blog/xyiv-riesenrad.jpg"><img src="../assets/blog/xyiv-riesenrad-thumb.jpg" width="400" style="float: left; margin-right: 10px" /></a> 
 A line of heavy activities in the last weeks happend around 
 [RPGP](https://github.com/rpgp/rpgp), the world's first full-Rust
 implemenation of OpenPGP from [Friedel Ziegelmayer](https://github.com/dignifiedquire/). His new Rust library supports Autocrypt 1.1 primitives and will allow us to switch from RSA
@@ -61,7 +61,7 @@ Firefox’s style component. If we’d had a time machine and could have
 written this component in Rust from the start, 51 (73.9%) of these bugs
 would not have been possible.*" 
 
-<img src="../assets/blog/xyiv-mate.jpg" width="200" style="float: right; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-mate.jpg"><img src="../assets/blog/xyiv-mate-thumb.jpg" width="200" style="float: right; margin-right: 10px" /></a> 
 The "X" in Xyiv can be taken to symbolize the "unknown", the twisted and winded paths
 of developments one can not predict nor expect. And the unexpectable did arrive 
 during our Kyiv gathering. Friedel played with [C2Rust](https://c2rust.com/),
@@ -178,7 +178,7 @@ The game on sunday, secretly prepared by Xenia with graphics from Demian, marked
 
 Co-incidentally, the sunday was also a religious culmination in it being the main day of ortodox eastern where everybody is out in the streets and churches.  
 <img src="../assets/blog/xyiv-church1b.png" width="200" style="float: right; margin-left: 10px" /> 
-<img src="../assets/blog/xyiv-dc4.jpg" width="100" style="float: left; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-dc4.jpg"><img src="../assets/blog/xyiv-dc4-thumb.jpg" width="100" style="float: left; margin-right: 10px" /></a>
 So one of the ad-hoc tasks became taking photographs from inside a church. A Key task was to 
 finding marked "dead drops" at 12 places inside the city. Dead drops contained further tasks that involved finding and placing stickers. The Dead drops were added as "Points of interests" to the maps that players could access during game play. This "add POI" feature was added just one day before the game took place. 
 
