--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -193,7 +193,7 @@ secretive talks were overheart around *Operation Werewolf* ... let further gamin
 
 # The party and special thanks to ... 
 
-<img src="../assets/blog/xyiv-koshey.jpg" width="200" style="float: left; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-koshey.jpg"><img src="../assets/blog/xyiv-koshey-thumb.gif" width="200" style="float: left; margin-right: 10px" /></a>
 <img src="../assets/blog/xyiv-anna2.jpg" width="200" style="float: right; margin-left: 10px" /> 
 Lastly, after the game, we had a party that was so nice that almost nobody had time
 to take pictures. There are rumors it took place in some cellar and that there was
