mention opentechfund and its funding

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -206,7 +206,6 @@ projected live-graphic coding at play, as well as shortages and abundances of al
 
 After this wild mix of images and impressions, you may be relieved to hear that the Delta
 Chat core team also agreed to focus now first of all to deliver stable DC releases in the upcoming 
-months. Weekly sync meetings on the #deltachat IRC freenode channel, wednesday 9pm CEST, are to 
-take place to help synchronize release efforts. Visit our [channels and repositories](https://delta.chat/en/contribute) if you want to orient yourself and potentially help in some capacity. 
+months.  This is also part of what we promised to the [OpenTechFund](https://opentechfund.com) who is funding many of the efforts described here in the post. Weekly sync meetings on the #deltachat IRC freenode channel, wednesday 9pm CEST, are to take place to synchronize release efforts. Visit our [channels and repositories](https://delta.chat/en/contribute) if you want to orient yourself and potentially help in some capacity. 
 
 Lastly, thanks to everybody who made it to Xyiv ... see you all hopefully soon on differently named but similarly joyful and productive occassions!
