re add the "original" coffeebus as full image when clicking on the thumbnail

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -7,7 +7,7 @@ author: olgax
 In the last couple of weeks, location mattered deeply for Delta Chat, the "Chat over E-mail"
 messenger. It does make a difference if software development is situated in a Starbucks
 in San Francisco or around a refurbished coffee-bus in Kyiv, the Ukrainian capital just 200km away both from a war zone and from Chernobyl. Some of you noticed already the appearance of "on demand location streaming" in the advanced Android app settings. This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
-<img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-coffeebus.jpg"><img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> </a>
 Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groups engaged with one topic or another. 
 
 ## On-demand location streaming 
