reorder last ux test para for better reading

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -95,7 +95,7 @@ four categories:
 - Verified groups and verified group management
 - Location streaming 
 
-The general feedback was quite interesting: users said they liked Delta Chat but would like to know what exactly is different about it, as compared to other messengers. They said that the « welcome messages » (onboarding messages) were rather strange and looked like marketing from other apps (« better / faster / stronger »). Instead of security they suggested to focus on decentralization / federation, and the community behind this project. There was a lot of feedback on several details and the upcoming UX test report is to discuss and evaluate those and suggest refinements and conclusions. 
+There was a lot of feedback on these tasks which the upcoming UX test report is to discuss and evaluate. Let us note one general feedback here which we found particularly interesting: users said they liked Delta Chat but would like to know what exactly is different about it, as compared to other messengers. They said that the « welcome messages » (onboarding messages) were rather strange and looked like marketing from other apps (« better / faster / stronger »). Instead of security they suggested to focus on decentralization / federation, and the community behind this project. 
 
 # The many, many other Xyiv sessions 
 
