refine wording around security review

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -47,10 +47,11 @@ on both Android and Desktop.
 <a href="../assets/blog/xyiv-riesenrad.jpg"><img src="../assets/blog/xyiv-riesenrad-thumb.jpg" width="400" style="float: left; margin-right: 10px" /></a> 
 A line of heavy activities in the last weeks happend around 
 [RPGP](https://github.com/rpgp/rpgp), the world's first full-Rust
-implemenation of OpenPGP from [Friedel Ziegelmayer](https://github.com/dignifiedquire/). His new Rust library supports Autocrypt 1.1 primitives and will allow us to switch from RSA
+implemenation of OpenPGP from [Friedel Ziegelmayer](https://github.com/dignifiedquire/). 
+His new Rust library supports Autocrypt 1.1 primitives and will allow us to switch from RSA
 to the shorter and more modern ED25519 keys for e-mail encryption within
 the next releases.  RPGP is working in development builds already. 
-Expect some news around arranging a security review from a third party soon ;) 
+We are working on getting an independent security code review on RPGP. 
 
 For those of you who haven't heart about it: Rust is a new
 systems-programming language from Mozilla.  It is widely hailed for its
