--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -6,8 +6,9 @@ author: olgax
 <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
 In the last couple of weeks, location mattered deeply for Delta Chat, the "Chat over E-mail"
 messenger. It does make a difference if software development is situated in a Starbucks
-in San Francisco or around a refurbished coffee-bus in Kyiv, the Ukrainian capital just 200km away both from a war zone and from Chernobyl. Some of you noticed already the appearance of "on demand location streaming" in the advanced Android app settings. This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
+in San Francisco or around a refurbished coffee-bus in Kyiv, the Ukrainian capital just 200km away both from a war zone and from Chernobyl. Some of you noticed already the appearance of "on demand location streaming" in the advanced Android app settings. This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space.
 <a href="../assets/blog/xyiv-coffeebus.jpg"><img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> </a>
+
 Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groups engaged with one topic or another. 
 
 ## On-demand location streaming 
@@ -181,7 +182,7 @@ Co-incidentally, the sunday was also a religious culmination in it being the mai
 <img src="../assets/blog/xyiv-church1b.png" width="200" style="float: right; margin-left: 10px" /> 
 <a href="../assets/blog/xyiv-dc4.jpg"><img src="../assets/blog/xyiv-dc4-thumb.jpg" width="100" style="float: left; margin-right: 10px" /></a>
 So one of the ad-hoc tasks became taking photographs from inside a church. A Key task was to 
-hunt for "dead drops" at 12 places inside the city. Dead drops contained further tasks that involved finding and placing stickers. The Dead drops were added as "Points of interests" to the maps that players could access during game play. This "add POI" feature was itself added just one day ahead of the game. 
+hunt for "dead drops" at 12 prepared places inside the city. Dead drops contained further tasks that involved finding and placing stickers. The Dead drops were added as "Points of interests" to the maps that players could access during game play. This "add POI" feature was itself added just one day ahead of the game. 
 
 <img src="../assets/blog/xyiv-m.gif" width="200" style="float: right; margin-left: 10px" /> 
 The game play involved a lot of Delta Chat features. Both groups quickly setup 
@@ -190,7 +191,9 @@ It also involved much of the brand-new location-streaming feature and players ch
 each other through the city. One young "politician" in a blue jacket was
 found hiding in strange places ... it was certainly telling how problems
 and confusion escalated from the overall stress of trying to understand
-what's happening, lost connectivity, "abducted" devices etc.
+what's happening, lost connectivity, "abducted" devices etc. It provided a first-hand
+glimpse into the complexities involved in co-ordinating human rights missions 
+in repressive situations. 
 
 Several players were eager to repeat and refine the game in their home towns. Also some 
 secretive talks were overheart around *Operation Werewolf* ... let further gaming commence :) 
@@ -205,7 +208,7 @@ projected live-graphic coding at play, as well as shortages and abundances of al
 
 # Upcoming stabilization releases ... 
 
-After this wild mix of images and impressions, you may be relieved to hear that the Delta
+After this wild mix of images and developments, you may be relieved to hear that the Delta
 Chat core team also agreed to focus now first of all to deliver stable DC releases in the upcoming 
 months.  This is also part of what we promised to the [OpenTechFund](https://opentechfund.com) who is funding many of the efforts described here in the post. Weekly sync meetings on the #deltachat IRC freenode channel, wednesday 9pm CEST, are to take place to synchronize release efforts. Visit our [channels and repositories](https://delta.chat/en/contribute) if you want to orient yourself and potentially help in some capacity. 
 
