fix formatting so blog post can be referenced through URL

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -43,7 +43,7 @@ map servers and are conspiring with substack who was, also during Xyiv, pushing 
 Chat integration. Meanwhile mapbox does the job and was convenient enough to integrate 
 on both Android and Desktop. 
 
-# The coming Delta Chat Rustocalypse 
+## The coming Delta Chat Rustocalypse 
 
 <a href="../assets/blog/xyiv-riesenrad.jpg"><img src="../assets/blog/xyiv-riesenrad-thumb.jpg" width="400" style="float: left; margin-right: 10px" /></a> 
 A line of heavy activities in the last weeks happend around 
@@ -81,7 +81,7 @@ Rust Book](https://doc.rust-lang.org/stable/book/) and are following
 DCC-Rust developments closely. Maybe some of you will join the fun and
 do Pull Requests to make [the new DCC Rust core safer?](https://github.com/deltachat/deltachat-core-rust/) 
 
-# UX testing sessions with Journalists and Activists 
+## UX testing sessions with Journalists and Activists 
 
 <img src="../assets/blog/xyiv-uxcomics.jpg" width="250" style="float: left; margin-right: 10px" /> 
 The Xyiv gathering started off with **two user-test sessions with journalists and activists**, 
@@ -99,7 +99,7 @@ four categories:
 
 There was a lot of feedback on these tasks which the upcoming UX test report is to discuss and evaluate. Let us note one general feedback here which we found particularly interesting: users said they liked Delta Chat but would like to know what exactly is different about it, as compared to other messengers. They said that the « welcome messages » (onboarding messages) were rather strange and looked like marketing from other apps (« better / faster / stronger »). Instead of security they suggested to focus on decentralization / federation, and the community behind this project. 
 
-# The many, many other Xyiv sessions 
+## The many, many other Xyiv sessions 
 
 <img src="../assets/blog/xyiv-heart-of-code.jpg" width="400" style="float: right; margin-right: 10px" /> 
 Several folks associated with the Heart of Code hackerspace in Berlin participated in Xyiv happenings. At the unconference, Cat and Martha presented and discussed the least years of diverse female hackerspace activities in germany.  In Kyiv, there currently is no hackerspace at all, though. Evolving a collective structure to open up self-organized spaces is riddled with challenges.  Some of the Xyiv group want to see about helping to bootstrap such a space in spring 2020, when Delta Chat is likely returning to Kyiv for another bigger gathering.  Donna from Syster Servers told about her 20 years of running infrastructure and giving workshops for women, and also participated in various other discussions around Delta Chat and sysadmin happenings. 
@@ -172,7 +172,7 @@ It is in those situations where e. g. location streaming becomes a more importan
 than than the crypto algorithm because then your supporters can know where you are and 
 better arrange for help. 
 
-# Gaming with decentralization 
+## Gaming with decentralization 
 
 <a href="../assets/blog/xyiv-cards1.jpg"><img src="../assets/blog/xyiv-cards1.png" width="400" style="float: left; margin-right: 10px" /></a>
 
@@ -198,7 +198,7 @@ in repressive situations.
 Several players were eager to repeat and refine the game in their home towns. Also some 
 secretive talks were overheart around *Operation Werewolf* ... let further gaming commence :) 
 
-# The party and special thanks to ... 
+## The party and special thanks to ... 
 
 <a href="../assets/blog/xyiv-koshey.jpg"><img src="../assets/blog/xyiv-koshey-thumb.gif" width="200" style="float: left; margin-right: 10px" /></a>
 <img src="../assets/blog/xyiv-anna2.jpg" width="200" style="float: right; margin-left: 10px" /> 
@@ -206,7 +206,7 @@ Lastly, after the game, we had a party that was so nice that almost nobody had t
 to take pictures. There are rumors it took place in some cellar and that there was
 projected live-graphic coding at play, as well as shortages and abundances of alcohol and that some folks only managed to get back well after the sun arose .... but in any case special thanks go to Anna who was our local support for arranging and caring for most of the infrastructures and places mentioned in this post. 
 
-# Upcoming stabilization releases ... 
+## Upcoming stabilization releases ... 
 
 After this wild mix of images and developments, you may be relieved to hear that the Delta
 Chat core team also agreed to focus now first of all to deliver stable DC releases in the upcoming 
