correct link, move image to the right to get a summary

--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -3,14 +3,15 @@ title: New desktop release with rpgp, location streaming and improved mac & ubun
 author: Jikstra
 ---
 
-<img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: left; margin-right: 10px" /> 
 
 What has changed:
+
 - We now use another OpenPGP implementation completely written in the Rust
   programming language which we already talked about in the [Kyiv Blog Post and
   the Rustocalypse](https://delta.chat/en/2019-05-08-xyiv). Check it out!
+  <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: right; margin-right: 10px" />
 - We implemented support for the location streaming feature, more infos about
-  this feature are also included in the [Kyiv blog post](.https://delta.chat/en/2019-05-08-xyiv)
+  this feature are also included in the [Kyiv blog post](https://delta.chat/en/2019-05-08-xyiv)
 - A big improvement is that we now have signed releases for Mac, this allows 
   users to install DeltaChat Desktop without fiddling with their security
   settings. Also openssl and all other dependencies are included in the dmg
