some work on the post ...

--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -1,36 +1,52 @@
 ---
-title: New desktop release with rpgp, location streaming and improved mac & ubuntu builds
+title: New desktop release with RPGP, location streaming and improved mac & ubuntu builds
 author: Jikstra
 ---
 
+There are new Desktop releases with several major improvements: 
 
-What has changed:
+- We now use [RPGP](https://github.com/rpgp/rpgp), the world's first
+  full-Rust implementation of OpenPGP, the underlying encryption format 
+  that Delta Chat is using. This new Rust library supports [Autocrypt 1.1](https://autocrypt.org) 
+  primitives and will allow to switch to ED25519 keys for e-mail encryption
+  within the two next releases. The Desktop releases are the first 
+  tangible sign of the upcoming [Rustocalypse](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse). Many thanks to Friedel for his perseverance on RPGP and
+  all the support with integrations. 
 
-- We now use another OpenPGP implementation completely written in the Rust
-  programming language which we already talked about in the [Kyiv Blog Post and
-  the Rustocalypse](https://delta.chat/en/2019-05-08-xyiv). Check it out!
-  <img src="../assets/blog/xyiv-to-kyiv2.png" width="200" style="float: right; margin-right: 10px" />
-- We implemented support for the location streaming feature, more infos about
-  this feature are also included in the [Kyiv blog post](https://delta.chat/en/2019-05-08-xyiv)
-- A big improvement is that we now have signed releases for Mac, this allows 
+- We integrated support for [location
+  streaming](https://delta.chat/en/2019-05-08-xyiv#on-demand-location-streaming).
+  Desktop can show a map for a group and the last position(s) of its participants. 
+  You can set points of interest for a group and use the time range of historic 
+  data to look at.  Android devices can report location via "attach location" 
+  after you enabled "on-demand-location streaming" in advanced settings. 
+  Many thanks to Nico who pushed this feature majorly forward in the last weeks. 
+   
+- We now have **signed releases for Mac** which allows 
   users to install DeltaChat Desktop without fiddling with their security
   settings. Also openssl and all other dependencies are included in the dmg
   install file. This means no more `brew install ...` for mac users!
-- Build improvements for ubuntu users also took place, we now have `.deb` files
-  for all major Ubuntu versions. They now automatically pull in all needed
-  dependencies, so users now don't need to install them manually anymore.
-- We have good news for ArchLinux users too, the updated AUR package now uses
-  rpgp too
 
-Besides build i mprovements also many smaller features and fixes landed in this
-release, including:
-- drafts for new messages
-- some performance fixes
+- We now have `.deb` files for all major Ubuntu versions. They now automatically 
+  pull in all needed dependencies, so users now don't need to install them 
+  manually anymore. 
+
+- Good news for ArchLinux users too: the updated AUR package now uses
+  RPGP too. 
+
+Besides build improvements also many smaller features and fixes landed: 
+
+- draft new messages are now saved on a per-chat basis 
+
+- some performance fixes which make the UI more fluid (more are coming!) 
+
 - importing and exporting keys works again 
-- a lot of refactoring of the backand/state handling took place
 
-For a full changelog look [here](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.103.0). 
+- a lot of refactoring of the backand/state handling took place,
+  to simplify future changes and maintenance. 
 
-If you have any problems with this release, as ususal, check out the Desktop
-section in our [Forum](https://support.delta.chat/c/desktop)
-github so we can have a look on it!
+For a full attributed changelog see 
+[here](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.103.0). 
+
+If you have problems with this release you may check out the [Desktop
+section in our Forum](https://support.delta.chat/c/desktop) or file
+bug reports on github so we can have a look on it!
