also modify download page with deb pointers

--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -1,6 +1,6 @@
 ---
 title: New desktop release with RPGP, location streaming and improved mac & ubuntu builds
-author: Jikstra
+author: Jikstra, holga
 ---
 
 There are new Desktop releases with several major improvements: 
@@ -11,7 +11,7 @@ There are new Desktop releases with several major improvements:
   primitives and will allow to switch to ED25519 keys for e-mail encryption
   within the two next releases. The Desktop releases are the first 
   tangible sign of the upcoming [Rustocalypse](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse). Many thanks to Friedel for his perseverance on RPGP and
-  all the support with integrations. 
+  all the support with integrations!
 
 - We integrated support for [location
   streaming](https://delta.chat/en/2019-05-08-xyiv#on-demand-location-streaming).
@@ -21,19 +21,21 @@ There are new Desktop releases with several major improvements:
   after you enabled "on-demand-location streaming" in advanced settings. 
   Many thanks to Nico who pushed this feature majorly forward in the last weeks. 
    
-- We now have **signed releases for Mac** which allows 
-  users to install DeltaChat Desktop without fiddling with their security
-  settings. Also openssl and all other dependencies are included in the dmg
+- Lots of [improved Desktop packaging](https://delta.chat/en/download),
+  majorly pushed forward by jikstra the last weeks: 
+  There are now [signed releases for Mac](https://github.com/deltachat/deltachat-desktop/releases/) 
+  which allows to install Delta Chat Desktop without fiddling with security settings. 
+  Also openssl and all other dependencies are included in the dmg
   install file. This means no more `brew install ...` for mac users!
 
-- We now have `.deb` files for all major Ubuntu versions. They now automatically 
-  pull in all needed dependencies, so users now don't need to install them 
-  manually anymore. 
+  There are now [Debian archives for all major Ubuntu versions](https://github.com/deltachat/deltachat-desktop/releases/). They each pull in all needed dependencies, so you don't 
+  need to install them manually anymore.  
 
-- Good news for ArchLinux users too: the updated AUR package now uses
-  RPGP too. 
+  Good news for ArchLinux users too: the [updated AUR package now uses
+  RPGP too](https://aur.archlinux.org/packages/deltachat-desktop-git/). 
 
-Besides build improvements also many smaller features and fixes landed: 
+Besides RPGP, location streaming and build improvements also many 
+smaller features and fixes landed: 
 
 - draft new messages are now saved on a per-chat basis 
 
@@ -44,7 +46,7 @@ Besides build improvements also many smaller features and fixes landed:
 - a lot of refactoring of the backand/state handling took place,
   to simplify future changes and maintenance. 
 
-For a full attributed changelog see 
+For a fully attributed changelog see 
 [here](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.103.0). 
 
 If you have problems with this release you may check out the [Desktop
