--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -13,16 +13,17 @@ There are new Desktop releases with several major improvements:
   tangible sign of the upcoming [Rustocalypse](https://delta.chat/en/2019-05-08-xyiv#the-coming-delta-chat-rustocalypse). Many thanks to Friedel for his perseverance on RPGP and
   all the support with integrations!
 
-- We integrated support for [location
+- We integrated support for the Desktop side of [location
   streaming](https://delta.chat/en/2019-05-08-xyiv#on-demand-location-streaming).
-  Desktop can show a map for a group and the last position(s) of its participants. 
-  You can set points of interest for a group and use the time range of historic 
-  data to look at.  Android devices can report location via "attach location" 
+  Desktop can show a map for a group and the last position(s) of its participants
+  if they enable location streaming. Android devices can report location via "attach location" 
   after you enabled "on-demand-location streaming" in advanced settings. 
-  Many thanks to Nico who pushed this feature majorly forward in the last weeks. 
+  You can set points of interest for a group and use the time range of historic 
+  data to look at. Many thanks to Nico who pushed this feature majorly forward 
+  in the last weeks so that we could use it [in the game](https://deploy-preview-162--deltachat.netlify.com/en/2019-05-08-xyiv#gaming-with-decentralization). 
    
 - Lots of [improved Desktop packaging](https://delta.chat/en/download),
-  majorly pushed forward by jikstra the last weeks: 
+  majorly pushed forward by Jikstra the last weeks: 
   There are now [signed releases for Mac](https://github.com/deltachat/deltachat-desktop/releases/) 
   which allows to install Delta Chat Desktop without fiddling with security settings. 
   Also openssl and all other dependencies are included in the dmg
@@ -34,8 +35,7 @@ There are new Desktop releases with several major improvements:
   Good news for ArchLinux users too: the [updated AUR package now uses
   RPGP too](https://aur.archlinux.org/packages/deltachat-desktop-git/). 
 
-Besides RPGP, location streaming and build improvements also many 
-smaller features and fixes landed: 
+Besides, many smaller features and fixes landed with this Desktop release: 
 
 - draft new messages are now saved on a per-chat basis 
 
@@ -46,8 +46,7 @@ smaller features and fixes landed:
 - a lot of refactoring of the backand/state handling took place,
   to simplify future changes and maintenance. 
 
-For a fully attributed changelog see 
-[here](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.103.0). 
+Here is the [attributed changelog](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.103.0) with more details. 
 
 If you have problems with this release you may check out the [Desktop
 section in our Forum](https://support.delta.chat/c/desktop) or file
