better internal link

--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -22,7 +22,7 @@ There are new Desktop releases with several major improvements:
   data to look at. Many thanks to Nico who pushed this feature majorly forward 
   in the last weeks so that we could use it [in the game](https://deploy-preview-162--deltachat.netlify.com/en/2019-05-08-xyiv#gaming-with-decentralization). 
    
-- Lots of [improved Desktop packaging](https://delta.chat/en/download),
+- Lots of [improved Desktop packaging](download),
   majorly pushed forward by Jikstra the last weeks: 
   There are now [signed releases for Mac](https://github.com/deltachat/deltachat-desktop/releases/) 
   which allows to install Delta Chat Desktop without fiddling with security settings. 
