streamline download linking

--- a/_posts/2019-05-22-desktop.md
+++ b/_posts/2019-05-22-desktop.md
@@ -24,16 +24,17 @@ There are new Desktop releases with several major improvements:
    
 - Lots of [improved Desktop packaging](download),
   majorly pushed forward by Jikstra the last weeks: 
-  There are now [signed releases for Mac](https://github.com/deltachat/deltachat-desktop/releases/) 
+  There are now **signed releases for Mac**
   which allows to install Delta Chat Desktop without fiddling with security settings. 
   Also openssl and all other dependencies are included in the dmg
   install file. This means no more `brew install ...` for mac users!
 
-  There are now [Debian archives for all major Ubuntu versions](https://github.com/deltachat/deltachat-desktop/releases/). They each pull in all needed dependencies, so you don't 
-  need to install them manually anymore.  
+  There are now **Debian archives for all major Ubuntu versions**
+  They each pull in all needed dependencies for the particular Ubuntu versions, 
+  so you don't need to install them manually anymore.  
 
-  Good news for ArchLinux users too: the [updated AUR package now uses
-  RPGP too](https://aur.archlinux.org/packages/deltachat-desktop-git/). 
+  Good news for ArchLinux users too: the **updated deltachat-desktop-git AUR 
+  package now uses RPGP too**.
 
 Besides, many smaller features and fixes landed with this Desktop release: 
 
