More css adjusting

--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -3,7 +3,7 @@ title: New desktop release with RPGP, location streaming and improved mac & ubun
 author: Jikstra, holga
 ---
 
-<img src="../assets/blog/20190625-desktop.png" width="200" /> 
+<img src="../assets/blog/20190625-desktop.png" width="200" style="width: 100%" /> 
 There are new Desktop releases with several major improvements: 
 
 - We now use [RPGP](https://github.com/rpgp/rpgp), the world's first
@@ -22,7 +22,7 @@ There are new Desktop releases with several major improvements:
   You can set points of interest for a group and use the time range of historic 
   data to look at. Many thanks to Nico who pushed this feature majorly forward 
   in the last weeks so that we could use it [in the game](https://deploy-preview-162--deltachat.netlify.com/en/2019-05-08-xyiv#gaming-with-decentralization). 
-  <img src="../assets/blog/20190625-desktop-location.png" width="200" style="margin-left: 10px" /> 
+  <img src="../assets/blog/20190625-desktop-location.png" width="200" style="float: left;width: 100%;margin-top: 5px;margin-bottom: 10px;" /> 
 - Lots of [improved Desktop packaging](download),
   majorly pushed forward by Jikstra the last weeks: 
   There are now **signed releases for Mac**
