--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -3,10 +3,31 @@ title: New desktop release with RPGP, location streaming and improved mac & ubun
 author: Jikstra, holga
 ---
 
-<img src="../assets/blog/20190625-desktop.png" width="200" style="width: 100%" /> 
-There are new Desktop releases with several major improvements: 
+<img src="../assets/blog/20190625-desktop.png" width="400" style="float: right ; width: 400" /> 
+There are new Desktop releases (0.104.0) with a new Rust-based encryption engine (RPGP),
+better Mac and Linux release packaging and several other UX improvements which 
+we detail further below.  See "Assets" on our [github releases page](https://github.com/deltachat/deltachat-desktop/releases/tag/v0.104.0) for the respective downloads. 
 
-- We now use [RPGP](https://github.com/rpgp/rpgp), the world's first
+**Import Notes about this release**:
+
+- **Don't forget to Synchronize Android/iOS to Desktop:** if you install Delta Chat desktop next
+  to an an already existing mobile version you need to synchronize your setups. 
+  After configuring Delta Chat Desktop, on Android trigger the "Send Autocrypt Setup message" in 
+  advanced settings and accept the Setup message from your Desktop app. After correctly entering 
+  the security/confirmation number (presented om mobile, typed in on desktop) you will see 
+  outgoing and incoming messages on both devices -- synchronization should be quite immediate. 
+
+- **You can use Desktop as your only Delta Chat App, no mobile required.**
+
+- **Delta Chat Desktop is well usable but does not have all UX features
+  of Android**. You are more than welcome to contribute [fixes/features on github](https://github.com/deltachat/deltachat-desktop) but note that feature discussion usually happens first 
+  on the [support forum](https://support.delta.chat). To begin with, the onboarding
+  process could be nicer for existing Android/iOS Delta Chat users could be nicer ;) 
+
+
+Here are the most major technical/UX highlights of the 0.104.0 Desktop Release: 
+
+- We now use [RPGP](https://github.com/rpgp/rpgp), the first
   full-Rust implementation of OpenPGP, the underlying encryption format 
   that Delta Chat is using. This new Rust library supports [Autocrypt 1.1](https://autocrypt.org) 
   primitives and will allow to switch to ED25519 keys for e-mail encryption
@@ -23,6 +44,7 @@ There are new Desktop releases with several major improvements:
   data to look at. Many thanks to Nico who pushed this feature majorly forward 
   in the last weeks so that we could use it [in the game](https://deploy-preview-162--deltachat.netlify.com/en/2019-05-08-xyiv#gaming-with-decentralization). 
   <img src="../assets/blog/20190625-desktop-location.png" width="200" style="float: left;width: 100%;margin-top: 5px;margin-bottom: 10px;" /> 
+
 - Lots of [improved Desktop packaging](download),
   majorly pushed forward by Jikstra the last weeks: 
   There are now **signed releases for Mac**
