minor wording fix

--- a/_posts/2019-06-25-desktop.md
+++ b/_posts/2019-06-25-desktop.md
@@ -22,7 +22,7 @@ we detail further below.  See "Assets" on our [github releases page](https://git
 - **Delta Chat Desktop is well usable but does not have all UX features
   of Android**. You are more than welcome to contribute [fixes/features on github](https://github.com/deltachat/deltachat-desktop) but note that feature discussion usually happens first 
   on the [support forum](https://support.delta.chat). To begin with, the onboarding
-  process could be nicer for existing Android/iOS Delta Chat users could be nicer ;) 
+  process for existing Android/iOS Delta Chat users could be nicer ;) 
 
 
 Here are the most major technical/UX highlights of the 0.104.0 Desktop Release: 
